--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JellyBean App</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jellybean</title>
+    <style>
+        body {
+            margin: 0;
+            background-color: transparent;
+            user-select: none;
+        }
+    </style>
 </head>
 <body>
-  <div id="app"></div>
-  <script src="/src/main.js"></script>
+    <script src="/@vite/client"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
