--- a/index.html
+++ b/index.html
@@ -1,53 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jelly Bean</title>
+    <title>Jelly Bean App</title>
     <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: transparent;
-        }
+      body, html {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: transparent;
+      }
 
-        img {
-            /* user-drag: none; */
-            /* user-select: none; */
-            /* -webkit-user-drag: none; */
-        }
+      #draggable {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 48px;
+        height: 48px;
+        -webkit-app-region: drag;
+      }
     </style>
-    <!-- <script>
-        window.addEventListener('DOMContentLoaded', () => {
-            const jellyBean = document.querySelector('img');
-            let isDragging = false;
-            let offsetX = 0;
-            let offsetY = 0;
-
-            jellyBean.addEventListener('mousedown', (e) => {
-                isDragging = true;
-                offsetX = e.clientX - jellyBean.getBoundingClientRect().left;
-                offsetY = e.clientY - jellyBean.getBoundingClientRect().top;
-            });
-
-            window.addEventListener('mousemove', (e) => {
-                if (isDragging) {
-                    window.electron.setWindowPosition(e.screenX - offsetX, e.screenY - offsetY);
-                }
-            });
-
-            window.addEventListener('mouseup', () => {
-                isDragging = false;
-            });
-        });
-    </script> -->
-</head>
-<body>
-    <img src="./jelly-bean.png" alt="Jelly Bean" width="100" height="100">
-</body>
+  </head>
+  <body>
+    <canvas id="jellyBeanCanvas"></canvas>
+    <div id="draggable"></div>
+    <script src="main.js"></script>
+  </body>
 </html>
