--- a/index.html
+++ b/index.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Jelly Bean App</title>
-    <style>
-      body, html {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: transparent;
-      }
-
-      #draggable {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 48px;
-        height: 48px;
-        -webkit-app-region: drag;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <canvas id="jellyBeanCanvas"></canvas>
-    <div id="draggable"></div>
-    <script src="main.js"></script>
+    <script src="./AppInterface.js"></script>
+    <script src="./main.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
