Migrating features to Handlers

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Jelly Bean App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <canvas id="jellyBeanCanvas"></canvas>
-    <script src="./AppInterface.js"></script>
+    <script src="./appinterface.js"></script>
     <script src="./main.js"></script>
     <script src="./index.js"></script>
   </body>
